# workflows-py

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  bundled_event_step.py  docs.config.mjs  nested_workflow.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  review.md
.changeset/: add-context-get-current.md  add-workflow-classname.md  add_resource_nodes.md  afraid-books-own.md  afraid-terms-kick.md  bright-events-flush.md  bright-waves-crash.md  brown-papers-eat.md  build-gc-grace-and-retry-audit.md  chilly-candies-push.md  clear-runcontext-on-consume.md  cold-queens-train.md  composable-retry-policy.md  cool-pumas-jump.md  curly-birds-tie.md  cyan-dragons-breathe.md  cyan-pillows-obey.md  dbos-shared-asyncpg-pool.md  deployment-phase-forward-compat.md  deployment-update-pending-ref.md  disable-context-api-default.md  document-crds-compat-version.md  draw_recent_execution_mermaid.md  edit-form-push-before-save.md  eight-weeks-occur.md  eleven-wasps-burn.md  famous-months-rhyme.md  few-ends-walk.md  fine-deer-flow.md  fine-places-pump.md  fix-concurrent-step-cancellation.md  fix-rebuild-state-checkpoint.md  flaky-idle-release-destroy.md  gold-lemons-matter.md  graph-validation-reach.md  great-trees-accept.md  green-spoons-help.md  icy-lamps-grab.md  improve-observability.md  itchy-crabs-report.md  (+88 more)
.github/: labeler.yml  release.yml
.github/workflows/: go-ci.yml  (+15 more)
architecture-docs/: build-api.md  control-loop.md  core-overview.md  overall-architecture.md  quick-reference.md  server-architecture.md
charts/: AGENTS.md
client-sdk/: .gitignore  README.md  openapi-ts.config.ts  package.json  tsconfig.json  tsup.config.ts
docker/: Dockerfile  Dockerfile.mitm-test  operator.Dockerfile
docs/: .gitignore  astro.config.mjs  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/api_docs/: README.md  mkdocs.yml  pyproject.toml
docs/api_docs/docs/api_reference/: context.md  decorators.md  errors.md  events.md  handler.md  index.md  resource.md  retry_policy.md
docs/api_docs/docs/api_reference/workflow_server/: client.md  models.md  server.md
docs/design/: idle-workflow-tracking.md
docs/docs/api_reference/workflow/: context.md  events.md  index.md  resource.md
docs/docs/module_guides/workflow/: index.md
docs/docs/understanding/workflow/: basic_flow.md  observability.md  stream.md  subclass.md
docs/docs/understanding/workflows/: branches_and_loops.md  concurrent_execution.md  observability.md  resources.md  state.md
docs/docs/workflows/: deployment.md  index.md  managing_state.md  resources.md
docs/docs/workflows/v2/: api_reference.md  customizing_entry_exit_points.md  drawing.md  durable_workflows.md  index.md  managing_events.md  managing_state.md  retry_steps.md
docs/src/components/: Header.astro  ProtectedContent.jsx  ProtectedTabs.jsx  llamaExtract.js  llamaParse.js  mdx_components.jsx
docs/src/content/docs/llamaagents/: _meta.yml  agent-data-javascript.md  agent-data-python.md  configuration-reference.md  getting-started.md  overview.md  ui-build.md  workflow-api.md
docs/src/content/docs/llamaagents/cloud/: _meta.yml  agent-data-javascript.md  agent-data-overview.md  agent-data-python.md  builder.md  click-to-deploy.md  index.md
docs/src/content/docs/llamaagents/llamactl/: _meta.yml  agent-data-javascript.md  agent-data-overview.md  agent-data-python.md  agent-templates.md  cd-with-github-actions.md  click-to-deploy.md  configuration-reference.md  getting-started.md  ui-build.md  ui-hooks.md  workflow-api.md
docs/src/content/docs/llamaagents/llamactl-reference/: _meta.yml  commands-auth-env.md  commands-auth.md  commands-deployments.md  commands-init.md  commands-pkg.md  commands-serve.md
docs/src/content/docs/llamaagents/workflows/: _meta.yml  async_workflows.md  blocking_code.md  branches_and_loops.md  client.md  concurrent_execution.md  customizing_entry_exit_points.md  dbos.md  deployment.md  drawing.md  durable_workflow_server.md  durable_workflows.md  human_in_the_loop.md  index.md  managing_state.md  observability.md  resources.md  retry_steps.md  server.md  streaming.mdx  unbound_functions.md
docs/src/content/docs/workflows/: customizing_entry_exit_points.md  deployment.md  durable_workflows.md  index.md  managing_events.md  retry_steps.md
docs/src/content/docs/workflows-api-reference/: index.md
docs/src/pages/: index.astro
examples/: .gitignore  README.md  agent.ipynb  document_processing.ipynb  durable_workflows.ipynb  emitting_and_receiving_multiple_events.ipynb  eval_driven_prompt_refinement.ipynb  fastapi_integration_example.py  feature_walkthrough.ipynb  observability_with_workflows.ipynb  server_example.py  state_management_with_vector_databases.ipynb  streaming_internal_events.ipynb  tracing.ipynb  workflows_observability_pt1.ipynb  workflows_observability_pt2.ipynb
examples/k8s-otel/: Dockerfile  README.md  Tiltfile  app.py  kind-config.yaml  pyproject.toml  verify_spans.py
examples/k8s-otel/k8s/: app.yaml  jaeger.yaml  kustomization.yaml  namespace.yaml  otel-collector.yaml  phoenix.yaml  postgres.yaml
operator/: AGENTS.md  CHANGELOG.md  Makefile  Tiltfile  dev.py  go.mod  go.sum  package.json
scripts/: detect_change_type.py  generate_release_notes.py  generate_sdk.py  generate_server_reference_docs.py  new_version.py  new_version.sh  plot_heap_usage.py  pre_release_check.py  process_manifests.py  release.sh  sync-docs-to-developer-hub.sh  test_many_workflows.py  test_new_version.py  update_index_html.py  validate_version.py
tests/: __init__.py  conftest.py  test_checkpointer.py  test_context.py  test_decorator.py  test_event.py  test_handler.py  test_resources.py  test_retry_policy.py  test_scripts.py  test_service.py  test_state_manager.py  test_stepwise.py  test_streaming.py  test_testing_utils.py  test_utils.py  test_workflow.py  test_workflow_dispatch_receive.py  test_workflow_internal_events.py  test_workflow_postponed_annotations.py  test_workflow_send_gather.py  test_workflow_typed_state.py
(+271 files in other folders)
