[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest-xdist>=3.8.0",
  "ruff>=0.14.5",
  "ty>=0.0.1,<0.0.9"
]

[project]
name = "llama-agents-workspace"
version = "0.1.0"
description = "Monorepo workspace for the LlamaIndex Workflows packages."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

[tool.basedpyright]
typeCheckingMode = "standard"

[[tool.basedpyright.executionEnvironments]]
root = "packages/llama-index-workflows"
pythonVersion = "3.9"

[[tool.basedpyright.executionEnvironments]]
root = "packages/llama-index-utils-workflow"
pythonVersion = "3.9"

[[tool.basedpyright.executionEnvironments]]
root = "packages/workflows-dev"
pythonVersion = "3.14"

[[tool.basedpyright.executionEnvironments]]
root = "packages/llama-index-integration-tests"
pythonVersion = "3.9"

[[tool.basedpyright.executionEnvironments]]
root = "examples"
pythonVersion = "3.14"

[tool.coverage.run]
omit = ["**/tests/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = [
  # default flake8 rules
  "E4",
  "E7",
  "E9",
  "F", # Pyflakes rules https://docs.astral.sh/ruff/rules/#pyflakes-f
  "I", # sort imports https://docs.astral.sh/ruff/rules/#isort-i
  "UP007", # Use X | Y for type annotations
  "UP045", # Use X | None for type annotations
  "ANN001", # Missing type annotation for function argument {name}
  "ANN002", # Missing type annotation for *{name}
  "ANN003", # Missing type annotation for **{name}
  "T201" # no print statements
]

[tool.ruff.lint.per-file-ignores]
# "tests/*" = ["D", "D100", "D101"]
"examples/**/*" = ["T201"]
"packages/*/tests/**/*" = [
  "T201",
  "ANN001",
  "ANN002",
  "ANN003",
  # remove UP007 and UP045 after removing 3.9 support
  "UP007",
  "UP045"
]
"*.ipynb" = ["T201", "ANN001", "ANN002", "ANN003"]
"__main__.py" = ["T201"]

[tool.ty.src]
exclude = ["**/uv.lock", "**/.gitignore"]

[tool.uv.sources]
llama-index-workflows = {workspace = true}
llama-index-utils-workflow = {workspace = true}
workflows-dev = {workspace = true}
llama-index-integration-tests = {workspace = true}

[tool.uv.workspace]
members = [
  "packages/llama-index-workflows",
  "packages/llama-index-utils-workflow",
  "packages/workflows-dev",
  "packages/llama-index-integration-tests",
  "docs/api_docs"
]
