[dependency-groups]
dev = [
  "pytest-xdist>=3.8.0",
  "ruff>=0.14.5",
  "ty>=0.0.1,<0.0.9",
  "workflows-dev"
]

[project]
name = "llama-agents-workspace"
version = "0.1.0"
description = "Monorepo workspace for the LlamaIndex Workflows packages."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

[tool.basedpyright]
typeCheckingMode = "standard"

[[tool.basedpyright.executionEnvironments]]
root = "packages/llama-index-workflows"
pythonVersion = "3.9"

[[tool.basedpyright.executionEnvironments]]
root = "packages/llama-index-workflows-client"
pythonVersion = "3.9"

[[tool.basedpyright.executionEnvironments]]
root = "packages/llama-index-workflows-server"
pythonVersion = "3.9"

[[tool.basedpyright.executionEnvironments]]
root = "packages/llama-index-utils-workflow"
pythonVersion = "3.9"

[[tool.basedpyright.executionEnvironments]]
root = "packages/workflows-dev"
pythonVersion = "3.14"

[[tool.basedpyright.executionEnvironments]]
root = "packages/llama-index-integration-tests"
pythonVersion = "3.13"

[[tool.basedpyright.executionEnvironments]]
root = "packages/llama-index-workflows-dbos"
pythonVersion = "3.10"

[[tool.basedpyright.executionEnvironments]]
root = "examples"
pythonVersion = "3.14"
reportMissingImports = false

[tool.coverage.run]
omit = ["**/tests/*"]

[tool.mypy]
explicit_package_bases = true
exclude = [
  "packages/llama-index-workflows-server/tests/",
  "packages/llama-index-workflows-client/tests/",
  "packages/llama-index-utils-workflow/tests/",
  "packages/workflows-dev/tests/",
  "packages/llama-index-workflows/src/llama_agents/",
  "packages/llama-index-workflows/tests/test_llama_agents_alias.py"
]

[tool.ruff.lint]
select = [
  # default flake8 rules
  "E4",
  "E7",
  "E9",
  "F", # Pyflakes rules https://docs.astral.sh/ruff/rules/#pyflakes-f
  "I", # sort imports https://docs.astral.sh/ruff/rules/#isort-i
  "UP007", # Use X | Y for type annotations
  "UP045", # Use X | None for type annotations
  "ANN001", # Missing type annotation for function argument {name}
  "ANN002", # Missing type annotation for *{name}
  "ANN003", # Missing type annotation for **{name}
  "T201" # no print statements
]

[tool.ruff.lint.per-file-ignores]
# "tests/*" = ["D", "D100", "D101"]
"examples/**/*" = ["T201"]
"packages/*/tests/**/*" = [
  "T201",
  # remove UP007 and UP045 after removing 3.9 support
  "UP007",
  "UP045"
]
"*.ipynb" = ["T201", "ANN001", "ANN002", "ANN003"]
"__main__.py" = ["T201"]

[tool.ty.src]
# Exclude llama_agents.workflows alias (dynamic import aliasing not understood by static analyzers)
exclude = ["**/uv.lock", "**/.gitignore", "**/llama_agents/workflows/**", "**/test_llama_agents_alias.py"]

[tool.uv.sources]
llama-index-integration-tests = {workspace = true}
llama-index-utils-workflow = {workspace = true}
llama-index-workflows = {workspace = true}
llama-index-workflows-client = {workspace = true}
llama-index-workflows-server = {workspace = true}
workflows-dev = {workspace = true}

[tool.uv.workspace]
members = [
  "docs/api_docs",
  "packages/llama-index-integration-tests",
  "packages/llama-index-utils-workflow",
  "packages/llama-index-workflows",
  "packages/llama-index-workflows-client",
  "packages/llama-index-workflows-server",
  "packages/workflows-dev"
]
