[project]
name = "k8s-otel-example"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
  "llama-agents-dbos",
  "opentelemetry-exporter-otlp",
  "opentelemetry-instrumentation-fastapi",
  "structlog",
  # otel bridges — swap between them by commenting in app.py
  "llama-index-observability-otel",
  "openinference-instrumentation-llama-index",
  "llama-index-core",
  "fastapi",
  "uvicorn"
]

[tool.uv.sources]
llama-agents-dbos = {workspace = true}
